# boost_beast_playground

./: .gitignore  CMakeLists.txt  CMakePresets.json  stdafx.hpp
examples/: keepalive.cpp  send_after_close.cpp  system_errors.cpp
py_scripts/: server.py
src/: client.cpp  client.hpp
